--- a/2.0.0.Repositorios.md
+++ b/2.0.0.Repositorios.md
@@ -1,3 +1,43 @@
+#### Repositorios de modelos 3D
+
+
+Vamos a hacer un recorrido sobre diferentes repositorios de modelos desde los que podemos descargar ficheros para imprimir.
+
+[![Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://img.youtube.com/vi/CbpULxqERrs/0.jpg)](https://drive.google.com/file/d/1_SmJO0vc-zB2pzVtisMQqFWJCwVDWiEn/view?usp=sharing)
+
+[Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://drive.google.com/file/d/1_SmJO0vc-zB2pzVtisMQqFWJCwVDWiEn/view?usp=sharing)
+
+
+En estos repositorios vamos a encontrar todo tipo de diseños, que se habrán realizado con diferentes programas de diseño. Pero la mayoría de ellos tendrán un fichero de malla de puntos de tipo STL o de tipo OBJ que vamos a poder utilizar para imprimir.   En el caso en el que el fichero estuviera en otro formato vamos a  necesitar convertirlo a uno de estos dos formatos. Esto lo podremos hacer en la mayoría de los software de diseño donde siempre va a asistir una opción de exportación a formato **STL** o formato **OBJ**. 
+
+Puesto que existen diferentes técnicas de diseño no todos los modelos son aptos para imprimirse.  Algunos de ellos, a pesar de que tengan un aspecto excelente, incluyen en su estructura pequeños agujeros o fisuras. En el proceso de laminado, el programa laminador cometerá errores  al generar las capas y  nos desaconsejará su impresión.
+
+Existen muchos, y seguro que algunos se quedan en el tintero, no dudes en comentar si echas alguno en falta.
+
+## [Thingiverse](http://www.thingiverse.com)
+
+Es con diferencia el repositorio más utilizado. En él vamos a encontrar todo tipo de modelos.  como casi todas estas páginas funciona como una red social en la que como usuario podemos seguir a otro usuario diseñadores y podemos marcar como me gusta con preferido y guardando distintos modelos que vayamos seleccionando. 
+
+Su funcionamiento es totalmente **gratuito** podemos subir nuestros contenidos siempre que queramos y descargar el contenido que otro usuario ha subido.  
+
+Hace un tiempo hubo cierta polémica acerca de ciertos modelos que algunos usuario habían subido y que  la empresa Makerbot, dueña de Thingiverse, había utilizado sin respetar la licencia.
+
+En Thingiverse podemos obtener prácticamente de todo. Para ello sólo tenemos que usar el buscador e ir explorando los resultados.
+
+Por ejemplo si [buscamos "Leonardo" podemos encontrar muchos diseños relacionados](https://www.thingiverse.com/search?q=leonardo&type=things&sort=relevant)
+
+![Resultados de búsqueda de "leonardo" en Thingiverse](./images/thingiverseLeonardo.png)
+
+Entre los resultados vemos que hay [diseños relacionados](https://www.thingiverse.com/thing:3693906)  y muy interesantes
+
+![Bicicleta de Leonardo](./images/biciLeonardo.jpg)
+
+Y otros que en principio no tienen nada que ver... nos ocurre un poco como nos pasa cuando buscamos en Internet, que hay un poco de todo.
+
+En thingiverse no hay nadie que se encargue de organizar la información ni filtrar. 
+
+Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puesto que existen cuidadores que se encargan de validar la calidad de los diseños.
+
 ## Printables: La plataforma de Prusa Research para la impresión 3D
 
 ![](./images/pintables.png)
